infrastructure/vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Transform: AWS::Serverless-2016-10-31

Parameters:
  CidrBlock:
    Type: String
  Environment:
    Type: String

Resources: 
  MyVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref CidrBlock
      InstanceTenancy : default
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub "my-network-${Environment}"
        - Key: CentroDiCosto
          Value: abc-123567
  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}a"
      VpcId: !Ref MyVpc
      CidrBlock: !Select [ 0, !Cidr [ !GetAtt MyVpc.CidrBlock, 2, 8 ]]
      Tags:
        - Key: Name
          Value: !Sub "subnet-1-${Environment}"
  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}b"
      VpcId: !Ref MyVpc
      CidrBlock: !Select [ 1, !Cidr [ !GetAtt MyVpc.CidrBlock, 2, 8 ]]
      Tags:
        - Key: Name
          Value: !Sub "subnet-2-${Environment}"
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: "ig-gateway"
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref MyVpc
  RouteTable1:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref MyVpc
  RouteTable2:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref MyVpc
  RoutingTableSub1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref RouteTable1
      SubnetId: !Ref Subnet1
  RoutingTableSub2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref RouteTable2
      SubnetId: !Ref Subnet2
  RouteForInternetGatewaySub1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTable1
  RouteForInternetGatewaySub2:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTable2
  HostedZone:
    Type: "AWS::Route53::HostedZone"
    Properties:
      Name: !Sub "wordpress-app.${Environment}"
      VPCs:
        - VPCId: !Ref MyVpc
          VPCRegion: !Ref "AWS::Region"

Outputs:
  MyNetwork:
    Value: !Ref MyVpc
  MySubnet1:
    Value: !Ref Subnet1
  MySubnet2:
    Value: !Ref Subnet2
  HostedZone:
    Value: !Ref HostedZone
